--- a/css/global.css
+++ b/css/global.css
@@ -81,3 +81,14 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
+.container .text-muted {
+  margin: 20px 0;
+}
